--- a/언어2주차복기/소희.md
+++ b/언어2주차복기/소희.md
@@ -4,6 +4,23 @@
 ## 22번~30번 복기
 
 ## 22 자릿수 더하기
+
+function solution(n) // Number 123
+{
+    let answer = 0;
+    let my = String(n); // String "123"
+    for ( let i=0; i < my.length; i++){
+        // answer += Number(my[i]);  // 인덱스접근 // Number 1 / 2 / 3 
+        answer += (+my[i]); // 2.형변환 방법 //3.parseInt()
+    }
+    return answer;
+}
 ### 1. string()과 n.string의 차이와 사용법
 
 ### 2. reduce() 고차함수로 반복문 리팩토링 
+
+function solution(n) { 
+  return [...String(n)].reduce((pre, cur) => pre+(+cur), 0)
+  return [...String(n)].reduce((pre, cur) => pre+Number(cur), 0)                                              
+} 
+
