--- a/언어2주차복기/소희.md
+++ b/언어2주차복기/소희.md
@@ -3,24 +3,36 @@
 # TIL 23.06.20 
 ## 22번~30번 복기
 
-## 22 자릿수 더하기
 
-function solution(n) // Number 123
+## 22 자릿수 더하기
+```
+JS
+
+function solution(n)                     // Number 123
 {
     let answer = 0;
-    let my = String(n); // String "123"
+    let my = String(n);                  // String "123"
     for ( let i=0; i < my.length; i++){
-        // answer += Number(my[i]);  // 인덱스접근 // Number 1 / 2 / 3 
-        answer += (+my[i]); // 2.형변환 방법 //3.parseInt()
+        // answer += Number(my[i]);      // 인덱스접근 // Number 1 / 2 / 3 
+        answer += (+my[i]);              // 2.형변환 방법 //3.parseInt()
     }
     return answer;
 }
+```
+
 ### 1. string()과 n.string의 차이와 사용법
 
-### 2. reduce() 고차함수로 반복문 리팩토링 
+- String() : 어떤 형태이든 문자열로 형 변환
+- toString() : null, und- 형변환 시 오류, 주로 parseint(string, radix)와 함께 숫자를 진수로 변경할 때 많이 씀.
+  - 예) a= 10; -> a.toString(2) -> '1010' -> parseint(a, 2) -> 10
 
+### 2. reduce()고차함수로 for문 리팩토링 
+```
 function solution(n) { 
-  return [...String(n)].reduce((pre, cur) => pre+(+cur), 0)
-  return [...String(n)].reduce((pre, cur) => pre+Number(cur), 0)                                              
-} 
+  return [...String(n)].reduce((pre, cur) => pre+(+cur), 0)         // reduce((pre, cur) => pre+(+cur), 0) 각 순서대로 누적, 현잿값, 초깃값(0)
+  return [...String(n)].reduce((pre, cur) => pre+Number(cur), 0)    //수자형으로 변환할 때의 차이일뿐 두 return문은 같다.                                          
+}
+```
+- 스프레드 연산자로 숫자 n을 배열화
+- reduce 콜백함수로 자기를 호출, 반환값을 다음 순회 시의 콜백함수의 첫 번째 인수로 전달하여 **하나의 결과값을 만들어 반환.**  
 
