--- a/언어2주차복기/소희.md
+++ b/언어2주차복기/소희.md
@@ -6,15 +6,13 @@
 
 ## 22 자릿수 더하기
 ```
-JS
-
 function solution(n)                     // Number 123
 {
     let answer = 0;
     let my = String(n);                  // String "123"
-    for ( let i=0; i < my.length; i++){
-        // answer += Number(my[i]);      // 인덱스접근 // Number 1 / 2 / 3 
-        answer += (+my[i]);              // 2.형변환 방법 //3.parseInt()
+    for ( let i=0; i < my.length; i++){  // 문자열이 담긴 변수 my의 길이 만큼 반복
+        // answer += Number(my[i]);      // my에 담긴 요소를 인덱스로 참조 // Number형 1 / 2 / 3 //[0]~
+        answer += (+my[i]);              // 숫자형으로 변환 방법 1. 문자열앞에 `+`2.Number() 메소드 사용 3.parseInt() 사용
     }
     return answer;
 }
@@ -22,7 +20,7 @@ function solution(n)                     // Number 123
 
 ### 1. string()과 n.string의 차이와 사용법
 
-- String() : 어떤 형태이든 문자열로 형 변환
+- String() : 어떤 형태이든 문자열로 형 변환 (강제 전환 가능)
 - toString() : null, und- 형변환 시 오류, 주로 parseint(string, radix)와 함께 숫자를 진수로 변경할 때 많이 씀.
   - 예) a= 10; -> a.toString(2) -> '1010' -> parseint(a, 2) -> 10
 
