--- a/언어2주차복기/소희.md
+++ b/언어2주차복기/소희.md
@@ -4,7 +4,7 @@
 ## 22번~30번 복기
 
 
-## 22 자릿수 더하기
+## 22 자릿수 더하기 
 ```
 function solution(n)                     // Number 123
 {
@@ -28,7 +28,7 @@ function solution(n)                     // Number 123
 ```
 function solution(n) { 
   return [...String(n)].reduce((pre, cur) => pre+(+cur), 0)         // reduce((pre, cur) => pre+(+cur), 0) 각 순서대로 누적, 현잿값, 초깃값(0)
-  return [...String(n)].reduce((pre, cur) => pre+Number(cur), 0)    //수자형으로 변환할 때의 차이일뿐 두 return문은 같다.                                          
+  return [...String(n)].reduce((pre, cur) => pre+Number(cur), 0)    //숫자형으로 변환할 때 방법의 차이일뿐 두 return문은 같다.                                          
 }
 ```
 - 스프레드 연산자로 숫자 n을 배열화
