--- a/언어2주차복기/소희.md
+++ b/언어2주차복기/소희.md
@@ -33,4 +33,15 @@ function solution(n) {
 ```
 - 스프레드 연산자로 숫자 n을 배열화
 - reduce 콜백함수로 자기를 호출, 반환값을 다음 순회 시의 콜백함수의 첫 번째 인수로 전달하여 **하나의 결과값을 만들어 반환.**  
-
+```
+function solution2(n) {
+  let str = n.toString();
+  let nArr = Array.from(str);  // Object ["123"]
+  let answer = 0;
+  for (i = 0; i < nArr.length; i++) {
+      answer += parseInt(nArr[i])
+  }
+  return answer;
+}
+```
+- Array.from(str) : 문자열 등의 유사 배열 객체나 이터러블한 객체를 배열로 만들어주는 메서드.
