--- a/언어2주차복기/소희.md
+++ b/언어2주차복기/소희.md
@@ -22,7 +22,7 @@ function solution(n)                     // Number 123
 
 - String() : 어떤 형태이든 문자열로 형 변환 (강제 전환 가능)
 - toString() : null, und- 형변환 시 오류, 주로 parseint(string, radix)와 함께 숫자를 진수로 변경할 때 많이 씀.
-  - 예) a= 10; -> a.toString(2) -> '1010' -> parseint(a, 2) -> 10
+  - 예 a= 10; -> a.toString(2) -> '1010' -> parseint(a, 2) -> 10
 
 ### 2. reduce()고차함수로 for문 리팩토링 
 ```
@@ -44,4 +44,26 @@ function solution2(n) {
   return answer;
 }
 ```
-- Array.from(str) : 문자열 등의 유사 배열 객체나 이터러블한 객체를 배열로 만들어주는 메서드.
+- Array.from(str) : 문자열 등의 유사 배열 객체나 이터러블한 객체를 배열로 만들어주는 메서드.  
+
+## 29. 3진법 뒤집기
+- 자연수 n이 매개변수로 주어집니다. n을 3진법 상에서 앞뒤로 뒤집은 후, 이를 다시 10진법으로 표현한 수를 return 하도록 solution 함수를 완성해주세요.
+
+```
+function solution(n) {
+
+    let ddd = n.toString(3).split('').reverse().join('')
+     return parseInt(ddd,3)
+    }
+```
+```
+function solution(n) {
+  return parseInt([...n.toString(3)].reverse().join(""), 3)
+}
+```
+### 1. 형변환 메서드 사용하는 문제. 
+### 1. 로직 
+- 숫자 n을 3진법으로 만들고,쪼개고, 조인하고, 다시 10진수로 변환.
+- n.toString(3)과 parseInt(ddd,3) 이 두개의 메서드 활용과 흐름에 주의.
+
+
